--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
     <nav id="scrollspy" class="navbar navbar-light bg-light navbar-expand-lg fixed-top" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="static/imgs/brand.svg" alt="" class="brand-img"></a>
+            <a class="navbar-brand" href="#"><img src="static/imgs/unmsm.png" alt="" class="brand-img"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,7 +44,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1 class="carousel-title">Calidad del aire<br> waza (Grupo 3)</h1>
+                            <h1 class="carousel-title">Calidad del aire<br></h1>
                         </div>
                     </div>
                 </div>
